2011-01-07  Alejandro G. Castro  <alex@igalia.com>

Reviewed by Martin Robinson.

        [cairo] Rendering a lot of arcs on top of each other causes time
        outs in some tests
        https://bugs.webkit.org/show_bug.cgi?id=50869

        We avoid the situation where we have to render the same arc
        multiple times over itself. Now it renders just one oval and
        moves to the end angle.

        * platform/graphics/cairo/PathCairo.cpp:
        (WebCore::Path::addArc):

2011-01-07  Alejandro G. Castro  <alex@igalia.com>

        Reviewed by Martin Robinson.

        [cairo] Rendering a lot of arcs on top of each other causes time
        outs in some tests
        https://bugs.webkit.org/show_bug.cgi?id=50869

        Unskip canvas-largedraws.html after improving the performance for
        big angles.

        * platform/gtk/Skipped:

Canonical link: https://commits.webkit.org/65577@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@75256 268f45cc-cd09-0410-ab3c-d52691b4dbfc